# telegram-np-news

./: .env.example  .gitignore  Pipfile  index.py  pyproject.toml
utils/: database.py  facebook.py  twitter.py
