[tool.poetry]
name = "repl_python3_telegram-np-news"
version = "0.1.0"
description = ""
authors = ["hereinthejungle <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
facebook-scraper = "^0.2.29"
flask = "^1.1.2"
python-dotenv = "^0.17.0"
telegram = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
