[tool]
[tool.poetry]
authors = ["hereinthejungle <<>>"]
description = ""
name = "repl_python3_telegram-np-news"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "*"
python = "^3.8"
python-dotenv = "*"
python-telegram-bot = "*"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
